# claude-monitor-tui

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.claude-plugin/: plugin.json
.github/workflows/: publish.yml
claude_spend/: dashboard.py  data.py  effectiveness.py
commands/: spend.md
docs/plans/: 2026-03-16-effectiveness-dashboard-design.md
docs/superpowers/plans/: 2026-03-11-sessions-skills.md  2026-03-15-pypi-distribution.md  2026-03-16-effectiveness-dashboard.md
docs/superpowers/specs/: 2026-03-11-sessions-skills-design.md  2026-03-14-sessions-redesign.md  2026-03-15-pypi-distribution-design.md
scripts/: dashboard.py  data.py
superpowers/plans/: 2026-03-10-claude-spend-tui.md  2026-03-10-fix-kpro-colon-parsing.md
tests/: conftest.py  test_aggregation.py  test_dashboard.py  test_data_models.py  test_effectiveness.py  test_session_parser.py
