[project]
name = "claude-spend"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "textual-plotext>=0.2.0",
    "plotext>=5.2.0",
]

[project.scripts]
claude-spend = "claude_spend.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
