[project]
name = "claude-monitor-tui"
version = "1.0.0"
description = "Terminal dashboard for monitoring Claude Code API usage and costs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Abiz" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.47.0",
    "textual-plotext>=0.2.0",
    "plotext>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
claude-monitor = "claude_spend.dashboard:main"

[project.urls]
Homepage = "https://github.com/frejisaur/claude-monitor-tui"
Repository = "https://github.com/frejisaur/claude-monitor-tui"
Issues = "https://github.com/frejisaur/claude-monitor-tui/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_spend"]
